[gd_scene load_steps=14 format=3 uid="uid://brptrqp46bq11"]

[ext_resource type="Texture2D" uid="uid://b2wh8kyf3m41s" path="res://icon.svg" id="1_05mpu"]
[ext_resource type="Script" path="res://scenes/game/bossfight/components/boss_face.gd" id="1_msnto"]
[ext_resource type="AudioStream" uid="uid://cry618m15kry2" path="res://assets/audio/sfx/Wolf Attack/wolf_attack-001.wav" id="3_gkcep"]
[ext_resource type="AudioStream" uid="uid://ditd5fol8jmgl" path="res://assets/audio/sfx/Wolf Attack/wolf_attack-002.wav" id="4_1qjjv"]
[ext_resource type="AudioStream" uid="uid://d3pd26cytwwe5" path="res://assets/audio/sfx/Wolf Attack/wolf_attack-003.wav" id="5_mq4e1"]
[ext_resource type="AudioStream" uid="uid://1fl2ywarqcv2" path="res://assets/audio/sfx/Wolf Attack/wolf_attack-004.wav" id="6_jjbtf"]
[ext_resource type="AudioStream" uid="uid://5wmge73kboq0" path="res://assets/audio/sfx/Wolf Attack/wolf_attack-005.wav" id="7_bjglq"]
[ext_resource type="AudioStream" uid="uid://c62eo8bcj3u75" path="res://assets/audio/sfx/Wolf Attack/wolf_attack-006.wav" id="8_nsh7b"]

[sub_resource type="Animation" id="Animation_58j5a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_UI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boss_UI:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 648)]
}

[sub_resource type="Animation" id="Animation_4lvku"]
resource_name = "attacking"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_UI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2, 4, 6, 8, 9.8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-500, -100), Vector2(500, -100), Vector2(-500, -100), Vector2(500, -100), Vector2(-500, -100), Vector2(500, -100), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_finished"
}]
}

[sub_resource type="Animation" id="Animation_p7ov1"]
resource_name = "damage"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_UI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-20, 0), Vector2(20, 0), Vector2(-20, 0), Vector2(20, 0), Vector2(-20, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_damage_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ra8oq"]
_data = {
"RESET": SubResource("Animation_58j5a"),
"attacking": SubResource("Animation_4lvku"),
"damage": SubResource("Animation_p7ov1")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_garh4"]
streams_count = 6
stream_0/stream = ExtResource("3_gkcep")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_1qjjv")
stream_1/weight = 1.0
stream_2/stream = ExtResource("5_mq4e1")
stream_2/weight = 1.0
stream_3/stream = ExtResource("6_jjbtf")
stream_3/weight = 1.0
stream_4/stream = ExtResource("7_bjglq")
stream_4/weight = 1.0
stream_5/stream = ExtResource("8_nsh7b")
stream_5/weight = 1.0

[node name="BossFace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msnto")

[node name="boss" type="Node2D" parent="."]

[node name="BossFace" type="TextureRect" parent="boss"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 512.0
offset_top = 260.0
offset_right = 640.001
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_05mpu")

[node name="Label" type="Label" parent="boss/BossFace"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -99.0
offset_right = 10.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.96, 2.4)
text = "DIALOGUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="attack_pb" type="ProgressBar" parent="boss"]
modulate = Color(1, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 342.0
offset_top = 402.0
offset_right = 810.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
max_value = 4.0
step = 0.05
show_percentage = false

[node name="boss_UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="defence_mode_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="attack_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="begin_battle_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ra8oq")
}

[node name="wolf_hit" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_garh4")

[node name="wolf_attack" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_garh4")

[connection signal="timeout" from="defence_mode_timer" to="." method="_on_defence_mode_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="begin_battle_timer" to="." method="_on_begin_battle_timer_timeout"]
